# PokemonRpg

./: .gitignore  CMakeLists.txt  Pokemon.cpp  PokemonRpg.cpp  README.md
assets/data/maps/: 0.tsx  main_world.tmx  pokemon1.tsx  world.tmx  world.txt  world1.tmx
include/: Camera.hpp  ComponentArray.hpp  ComponentId.hpp  ComponentManager.hpp  Ecs.hpp  EcsManager.hpp  EntityManager.hpp  Input.hpp  PokemonRpg.h  Scene.hpp  System.hpp  SystemManager.hpp  TexturePool.hpp  TypeId.hpp  component.h  component_array.h  component_manager.h  components.hpp  constants.hpp  ecs.h  entity_manager.h  pokemon.h  scene.h  scene_manager.h  system.h  system_manager.h  texture_pool.h  tiledmap.hpp  types.hpp  util.h  util.hpp
include/ecs/: Camera.hpp  ComponentArray.hpp  ComponentManager.hpp  ECS.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  components.hpp
include/scene/: Scene.hpp  SceneId.hpp  SceneLevel.cpp  SceneLoadingScreen.cpp  SceneManager.cpp  SceneTitleScreen.cpp
script/: crop_image.py  map.py  tiled_map.py
src/: Camera.cpp  Camera.h  EntityManager.cpp  Input.cpp  SceneLevel.cpp  SceneLoading.cpp  SceneManager.cpp  SceneTitleScreen.cpp  SystemObstacle.cpp  SystemSprite.cpp  TexturePool.cpp  TexturePool.h  TypeId.h  entity_manager.cpp  main.cpp  pokemon.h  scene_battle.cpp  scene_level.cpp  scene_manager.cpp  scene_title_screen.cpp  system_obstacle.cpp  system_player.cpp  system_rigid_body.cpp  system_sprite.cpp  system_sprite_animation.cpp  system_transform.cpp  texture_pool.cpp  tiledmap.cpp  util.cpp  util.h
src/assets/data/maps/: world.tmx  world.txt
src/assets/tiled-map/: Snow_4.tsx  ddm4sgg-ce0f2937-1c24-48a7-82d7-e2c3f515d0f4.tsx  freelavatileset-Sheet.tsx  main.tiled-session  pokemon1.tsx  world.tmx  world.tsx
src/assets/tiled-map/tilesets/Devian Art/: CREDITS.txt
src/assets/tiled-map/tilesets/Top Down Lava Tileset 16x16 Free/: Terms.txt
src/assets/tiled-map/tilesets/Top Down Lava Tileset 16x16 Free/FREE TILESET FILES/: freelavatileset.aseprite
src/assets/tiled-map/world/: map.txt
src/ecs/: Camera.cpp  Camera.h  CollisionSystem.cpp  Component.h  Component.hpp  ComponentArray.cpp  ComponentArray.h  ComponentManager.h  ECS.cpp  ECS.h  ECS.hpp  EcsManager.h  Entity.cpp  Entity.h  Entity.hpp  EntityManager.cpp  EntityManager.h  MovementSystem.cpp  PlayerSystem.cpp  SpriteAnimationSystem.cpp  SpriteSystem.cpp  SysteManager.h  System.cpp  System.h  System.hpp  SystemBezierCurve.cpp  SystemBoat.cpp  SystemCollisionBody.cpp  SystemCollisionBodyStatic.cpp  SystemCollisionBox.cpp  SystemCollisionBoxStatic.cpp  SystemManager.h  SystemPlayer.cpp  SystemSprite.cpp  SystemSpriteAnimation.cpp  SystemTransform.cpp  SystemWater.cpp  TransformSystem.cpp  components.h  player.cpp  (+1 more)
src/resources/data/maps/: Desert2.tsx  Pokemon.tsx  main.tmx  pokemon.tiled-session
src/scene/: Level.cpp  LevelScene.cpp  LoadingScene.cpp  LoadingScreen.cpp  Scene.h  Scene.hpp  SceneID.h  SceneLevel.cpp  SceneLoadingScreen.cpp  SceneManager.cpp  SceneTest1.cpp  SceneTitleScreen.cpp  TestScene.cpp  TestScene1.cpp  TitleScreen.cpp
src/util/: AssetPool.cpp  AssetPool.h  AssetPool.hpp  Camera.cpp  Camera.h  Camera.hpp  Debug.cpp  Debug.h  FontID.h  FontPool.cpp  FontPool.h  FrameCounter.cpp  FrameCounter.h  FrameCounter.hpp  Mouse.cpp  Mouse.h  SceneId.h  TexturePool.cpp  TexturePool.h  TiledMap.cpp  TiledMap.h  TiledMapId.h  TypeID.h  TypeId.h  WaterType.h  constants.h  constants.hpp  globals.hpp  types.h  types.hpp  util.cpp  util.h  util.hpp
src/window/: Camera.cpp  Camera.h  Window.cpp  Window.h
